Fri Dec 18 12:39:42 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* doc/syntax/*.rdoc: separated modifier at sentence.
	  [ci skip][fix GH-1121] Patch by @clandry94

Fri Dec 18 12:09:21 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_ungetbyte): pad with \000 when
	  the current position is after the end.

Fri Dec 18 11:24:48 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_method.c (rb_method_entry_make, check_override_opt_method):
	  should check whether a newly created method override a optimize
	  method in case the method is defined in a prepended module of a
	  built-in class.
	  [ruby-core:72226] [Bug #11836]

Fri Dec 11 06:39:30 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm.c (vm_exec): call RUBY_DTRACE_CMETHOD_RETURN_HOOK instead of
	  RUBY_DTRACE_METHOD_RETURN_HOOK.

Fri Dec 18 10:24:44 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/irb/ruby-lex.rb: fixed parse error for striped heredocument syntax.
	  [fix GH-1127] Patch by @koic

Fri Dec 18 09:44:47 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/pty/pty.c: fix double words typo.
	  [ci skip][fix GH-1157] Patch by @jwworth

Fri Dec 18 09:42:45 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/nkf/nkf-utf8/utf8tbl.c: fix a typo.
	  [ci skip][fix GH-1159] Patch by @akshay-vishnoi
	* ext/nkf/nkf-utf8/utf8tbl.h: ditto.

Fri Dec 18 07:39:01 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm.c (rb_vm_check_redefinition_opt_method): should check the real
	  class instead of the origin iclass.
	  [ruby-core:72188] [Bug #11826]

Thu Dec 17 22:13:10 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_args.c (vm_caller_setup_arg_block): remove code for ifunc
	  because it was made unnecessary by r52138.

Thu Dec 17 16:13:10 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* proc.c (rb_block_arity): should not call GetProcPtr() for symbols.
	  [ruby-core:72205] [Bug #11830]

Thu Dec 17 14:16:29 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
