@@ -1,3 +1,8 @@
+Fri Dec 18 15:40:06 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/stringio/stringio.c (strio_unget_bytes): extract from
+	  strio_ungetbyte to share with strio_ungetc.
+
 Fri Dec 18 12:39:42 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* doc/syntax/*.rdoc: separated modifier at sentence.
